--- a/frontend/web/scss/components/_phone-widget.scss
+++ b/frontend/web/scss/components/_phone-widget.scss
@@ -389,6 +389,7 @@
 					position: absolute;
 					color: $white;
 					font-weight: 500;
+					text-align: center;
 				}
 			}
 		}
